--- a/src/app/components/admin/about-update/about-update.html
+++ b/src/app/components/admin/about-update/about-update.html
@@ -276,6 +276,131 @@
       </div>
     </div>
 
+    <!-- Title & Description 6 -->
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+      <div>
+        <div class="relative pb-2">
+          <input
+            type="text"
+            [field]="form.title6"
+            id="title6"
+            autocomplete="off"
+            class="block px-2.5 pb-2.5 pt-4 w-full text-sm text-heading bg-transparent rounded-base border border-default-medium appearance-none focus:outline-none focus:ring-0 focus:border-brand peer"
+            placeholder=" "
+            [class.bg-gray-100]="!isEdit()"
+            [class.cursor-not-allowed]="!isEdit()"
+          />
+          <label
+            for="title6"
+            class="absolute text-sm text-body duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-left bg-neutral-primary px-2 peer-focus:px-2 peer-focus:text-fg-brand peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto start-1"
+            >Left State Title</label
+          >
+        </div>
+      </div>
+
+      <div>
+        <div class="relative pb-2">
+          <input
+            type="text"
+            [field]="form.description6"
+            id="description6"
+            autocomplete="off"
+            class="block px-2.5 pb-2.5 pt-4 w-full text-sm text-heading bg-transparent rounded-base border border-default-medium appearance-none focus:outline-none focus:ring-0 focus:border-brand peer"
+            placeholder=" "
+            [class.bg-gray-100]="!isEdit()"
+            [class.cursor-not-allowed]="!isEdit()"
+          />
+          <label
+            for="description6"
+            class="absolute text-sm text-body duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-left bg-neutral-primary px-2 peer-focus:px-2 peer-focus:text-fg-brand peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto start-1"
+            >Left State Value</label
+          >
+        </div>
+      </div>
+    </div>
+    <!-- Title & Description 7 -->
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+      <div>
+        <div class="relative pb-2">
+          <input
+            type="text"
+            [field]="form.title7"
+            id="title7"
+            autocomplete="off"
+            class="block px-2.5 pb-2.5 pt-4 w-full text-sm text-heading bg-transparent rounded-base border border-default-medium appearance-none focus:outline-none focus:ring-0 focus:border-brand peer"
+            placeholder=" "
+            [class.bg-gray-100]="!isEdit()"
+            [class.cursor-not-allowed]="!isEdit()"
+          />
+          <label
+            for="title7"
+            class="absolute text-sm text-body duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-left bg-neutral-primary px-2 peer-focus:px-2 peer-focus:text-fg-brand peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto start-1"
+            >Middle State Title</label
+          >
+        </div>
+      </div>
+      <div>
+        <div class="relative pb-2">
+          <input
+            type="text"
+            [field]="form.description7"
+            id="description7"
+            autocomplete="off"
+            class="block px-2.5 pb-2.5 pt-4 w-full text-sm text-heading bg-transparent rounded-base border border-default-medium appearance-none focus:outline-none focus:ring-0 focus:border-brand peer"
+            placeholder=" "
+            [class.bg-gray-100]="!isEdit()"
+            [class.cursor-not-allowed]="!isEdit()"
+          />
+          <label
+            for="description7"
+            class="absolute text-sm text-body duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-left bg-neutral-primary px-2 peer-focus:px-2 peer-focus:text-fg-brand peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto start-1"
+            >Middle State Value</label
+          >
+        </div>
+      </div>
+    </div>
+    <!-- Title & Description 8 -->
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+      <div>
+        <div class="relative pb-2">
+          <input
+            type="text"
+            [field]="form.title8"
+            id="title8"
+            autocomplete="off"
+            class="block px-2.5 pb-2.5 pt-4 w-full text-sm text-heading bg-transparent rounded-base border border-default-medium appearance-none focus:outline-none focus:ring-0 focus:border-brand peer"
+            placeholder=" "
+            [class.bg-gray-100]="!isEdit()"
+            [class.cursor-not-allowed]="!isEdit()"
+          />
+          <label
+            for="title8"
+            class="absolute text-sm text-body duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-left bg-neutral-primary px-2 peer-focus:px-2 peer-focus:text-fg-brand peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto start-1"
+            >Right State Title</label
+          >
+        </div>
+      </div>
+      <div>
+        <div class="relative pb-2">
+          <input
+            type="text"
+            [field]="form.description8"
+            id="description8"
+            autocomplete="off"
+            class="block px-2.5 pb-2.5 pt-4 w-full text-sm text-heading bg-transparent rounded-base border border-default-medium appearance-none focus:outline-none focus:ring-0 focus:border-brand peer"
+            placeholder=" "
+            [class.bg-gray-100]="!isEdit()"
+            [class.cursor-not-allowed]="!isEdit()"
+          />
+          <label
+            for="description8"
+            class="absolute text-sm text-body duration-300 transform -translate-y-4 scale-75 top-2 z-10 origin-left bg-neutral-primary px-2 peer-focus:px-2 peer-focus:text-fg-brand peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-75 peer-focus:-translate-y-4 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto start-1"
+            >Right State Value</label
+          >
+        </div>
+      </div>
+    </div>
+
     <!-- Image Upload -->
     <div class="pb-2">
       <label class="block text-sm font-medium text-heading" for="imageUrl">About Image</label>
